--- a/app/src/main/res/layout/fragment_help.xml
+++ b/app/src/main/res/layout/fragment_help.xml
@@ -7,11 +7,11 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity$PlaceholderFragment">
+    tools:context="doop.aa_schedule.About">
 
     <TextView
-        android:id="@+id/section_label"
-        android:text="test!!!"
+        android:id="@+id/helpText"
+        android:text="@string/help"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
