--- a/app/src/main/res/layout/fragment_view_schedule.xml
+++ b/app/src/main/res/layout/fragment_view_schedule.xml
@@ -6,11 +6,12 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity$PlaceholderFragment">
+    android:paddingBottom="@dimen/activity_vertical_margin">
+    <!--tools:context="doop.aa_schedule.ViewSchedule"-->
+
 
     <TextView
-        android:id="@+id/section_label"
+        android:id="@+id/viewSText"
         android:text="wow look at this schedule m8. u have AP Hell at 4:20 in room 666"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
