--- a/app/src/main/res/layout/view_period.xml
+++ b/app/src/main/res/layout/view_period.xml
@@ -7,19 +7,27 @@
     android:layout_weight="1">
 
     <TextView
-        android:id="@+id/per_start_text"
+        android:id="@+id/per_time_text"
+        android:textSize="12sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true" />
-    <TextView
+        android:layout_centerVertical="true"
+        android:paddingLeft="4dp"/>
+
+    <!--<TextView
         android:id="@+id/per_end_text"
+        android:textSize="12dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true" />
+        android:paddingLeft="32dp"
+        android:layout_alignParentBottom="true" />-->
+    <!--android:layout_alignLeft="@+id/space1"-->
+
     <TextView
         android:id="@+id/per_main_text"
+        android:textSize="14sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
