--- a/app/src/main/res/layout/fragment_edit_schedule.xml
+++ b/app/src/main/res/layout/fragment_edit_schedule.xml
@@ -5,8 +5,7 @@
     android:orientation="vertical">
     <!--xmlns:tools="http://schemas.android.com/tools"-->
 
-
-    <android.support.v4.view.ViewPager
+    <doop.aa_schedule.PauseViewPager
         android:id="@+id/edit_pager"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
