Added new settings

--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -3,5 +3,5 @@
     <integer name="start_year">2015</integer> <!--2015=2015-->
     <integer name="start_month">5</integer> <!--january=0, ...-->
     <integer name="start_day">8</integer> <!--1st=1, ...-->
-    <integer name="minimum_period">15</integer>
+    <integer name="default_min_per">15</integer>
 </resources>
