--- a/app/src/main/res/layout/fragment_help.xml
+++ b/app/src/main/res/layout/fragment_help.xml
@@ -11,6 +11,7 @@
 
     <TextView
         android:id="@+id/helpText"
+        android:textSize="@dimen/abc_text_size_medium_material"
         android:text="@string/help"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
