--- a/app/src/main/res/xml/fragment_preference.xml
+++ b/app/src/main/res/xml/fragment_preference.xml
@@ -45,6 +45,7 @@ show weekends
 min period length
 set colors for background, highlight,
     (figure out how to launch a dialog)
+turn off weighted periods... or make frees larger :)
 
 
 -->
