--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -9,11 +9,15 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="doop.aa_schedule.About">
 
-    <TextView
-        android:id="@+id/aboutText"
-        android:textSize="@dimen/abc_text_size_medium_material"
-        android:text="@string/about"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <TextView
+            android:id="@+id/aboutText"
+            android:textSize="@dimen/abc_text_size_medium_material"
+            android:text="@string/about"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </ScrollView>
 
 </RelativeLayout>
