--- a/app/src/main/res/layout/fragment_edit_block.xml
+++ b/app/src/main/res/layout/fragment_edit_block.xml
@@ -2,23 +2,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView android:id="@+id/edit_block"
-        android:text="@string/edit_block_label"
-        android:textSize="18sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"/>
-
     <TextView android:id="@+id/class_text"
         android:textSize="@dimen/abc_text_size_medium_material"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/class_tag"
-        android:layout_below="@+id/edit_block"/>
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="18dp"
+        android:layout_marginLeft="12dp"
+        android:paddingTop="4dp"/>
     <EditText android:id="@+id/class_edit"
-        android:layout_margin="5dp"
-        android:layout_width="fill_parent"
+        android:layout_marginLeft="7dp"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:background="@drawable/rectangle"
         android:layout_toRightOf="@+id/class_text"
@@ -30,9 +25,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/room_tag"
-        android:layout_below="@+id/class_edit"/>
+        android:layout_below="@+id/class_edit"
+        android:layout_marginTop="12dp"
+        android:layout_alignLeft="@+id/class_text"
+        android:paddingTop="4dp"/>
     <EditText android:id="@+id/room_edit"
-        android:layout_margin="5dp"
+        android:layout_marginLeft="7dp"
         android:layout_width="75dp"
         android:layout_height="wrap_content"
         android:background="@drawable/rectangle"
@@ -40,12 +38,29 @@
         android:layout_alignTop="@+id/room_text"
         android:inputType="textCapCharacters"/>
 
+    <TextView android:id="@+id/free_text"
+        android:textSize="@dimen/abc_text_size_medium_material"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/free_tag"
+        android:layout_below="@+id/room_edit"
+        android:layout_marginTop="12dp"
+        android:layout_alignLeft="@+id/class_text"
+        android:paddingTop="3dp"/>
+    <CheckBox android:id="@+id/free_edit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/free_text"
+        android:layout_alignTop="@+id/free_text"/>
+
     <Button android:id="@+id/color_edit"
         android:textSize="@dimen/abc_text_size_medium_material"
         android:text="@string/color_tag"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/room_edit"/>
+        android:layout_below="@+id/free_edit"
+        android:layout_alignLeft="@+id/class_text"
+        android:layout_marginTop="8dp"/>
 
     <Button android:id="@+id/save"
         android:layout_width="wrap_content"
